--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,11 @@
     transform: rotate(360deg);
   }
 }
+
+form input {
+  margin: 10px;
+  height: 30px;
+  font-size: 20px;
+  align-items: center;
+  justify-content: space-around;
+}
